Fixed email button to align with other list on navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,3 +51,7 @@ body{
   border-color: #33691E;
   font-size: 16px;
 }
+
+#current_admin_list{
+  margin-top: 17px;
+}
